--- a/index.html
+++ b/index.html
@@ -32,139 +32,90 @@
 
     <!-- Banner -->
     <section id="banner">
-      <h2>Spatial</h2>
-      <p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
+      <h2>Nutritional Necessities</h2>
+      <p>New York City is covered with food deserts. <br />
+      Learn how to stay healthy in the city that never sleeps.</p>
       <ul class="actions">
-        <li><a href="#" class="button special big">Get Started</a></li>
+        <li><a href="#one" class="button special big">Get Started</a></li>
       </ul>
     </section>
 
     <!-- One -->
     <section id="one" class="wrapper style1">
-      <div class="container 75%">
-        <div class="row 200%">
+
+      <div class="container">
+
+        <div class="row">
           <div class="6u 12u$(medium)">
-            <header class="major">
-              <h2>Maecenas luctus lectus</h2>
-              <p>Perspiciatis doloremque recusandae dolor</p>
-            </header>
+            <span class="image fit">
+              <img src="images/supermarket-need-index.png" alt="" />
+            </span>
           </div>
-          <div class="6u$ 12u$(medium)">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ea mollitia corporis id, distinctio sunt veritatis officiis dolore reprehenderit deleniti voluptatibus harum magna, doloremque alias quisquam minus, eaque. Feugiat quod, nesciunt! Iste quos ipsam, iusto sit esse.</p>
-            <p>Dolorum aspernatur maxime libero ratione quidem distinctio, placeat fugiat laborum voluptatum enim neque soluta vel sunt id ex veritatis. Labore rerum, odit sapiente, alias mollitia magnam exercitationem modi amet earum quia atque ipsum voluptas asperiores quas laboriosam.</p>
+          <div class="6u 12u$(medium)">
+            <h2>Food Deserts</h2>
+            <p>Despite New York City being one of the wealthiest cities on the planet, low-income neighborhoods are going hungry and suffering nutritionally. With the rise of industrialized agriculture, modern industrial crops are bred for high yield, ease of transport, cheaper production, and fast growth, rather than for nutrient content. Though sustainably-grown unprocessed food, such as whole grains, legumes, and fresh fruits and vegetables, may be available in middle and upper-class communities, such food is not available to many populations in New York City. There is a direct correlation between a lack of access to healthy foods and health risks, including obesity.</p>
+            <a class="button" href="problem.html">Learn more</a>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="6u 12u$(medium)">
+            <h2>Solutions</h2>
+            <p>There are many solutions to this problem.</p>
+            <a class="button" href="solutions.html">Learn more</a>
+          </div>
+          <div class="6u 12u$(medium)">
+            <span class="image fit">
+              <img src="images/solutions.jpg" alt="" />
+            </span>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="6u 12u$(medium)">
+            <span class="image fit">
+              <img src="images/supermarket.jpg" alt="" />
+            </span>
+          </div>
+          <div class="6u 12u$(medium)">
+            <h2>Find supermarkets</h2>
+            <p>Find supermarkets near you where you can buy healthy ingredients.</p>
+            <a class="button" href="supermarkets.html">Learn more</a>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="6u 12u$(medium)">
+            <h2>Learn recipes</h2>
+            <p>There are many healthy recipe choices to make sure you're eating a nutritious and delicious meal.</p>
+            <a class="button" href="recipes.html">Learn more</a>
+          </div>
+          <div class="6u 12u$(medium)">
+            <span class="image fit">
+              <img src="images/cooking.png" alt="" />
+            </span>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="6u 12u$(medium)">
+            <span class="image fit">
+              <img src="images/rooftop-garden.jpg" alt="" />
+            </span>
+          </div>
+          <div class="6u 12u$(medium)">
+            <h2>Rooftop gardens</h2>
+            <p>Starting a rooftop garden is a cheap alternative to buying all of your groceries.</p>
+            <a class="button" href="rooftop-gardens.html">Learn more</a>
           </div>
         </div>
       </div>
-    </section>
 
-    <!-- Two -->
-    <section id="two" class="wrapper style2 special">
-      <div class="container">
-        <header class="major">
-          <h2>Fusce ultrices fringilla</h2>
-          <p>Maecenas vitae tellus feugiat eleifend</p>
-        </header>
-        <div class="row 150%">
-          <div class="6u 12u$(xsmall)">
-            <div class="image fit captioned">
-              <img src="images/pic02.jpg" alt="" />
-              <h3>Lorem ipsum dolor sit amet.</h3>
-            </div>
-          </div>
-          <div class="6u$ 12u$(xsmall)">
-            <div class="image fit captioned">
-              <img src="images/pic03.jpg" alt="" />
-              <h3>Illum, maiores tempora cupid?</h3>
-            </div>
-          </div>
-        </div>
-        <ul class="actions">
-          <li><a href="#" class="button special big">Nulla luctus</a></li>
-          <li><a href="#" class="button big">Sed vulputate</a></li>
-        </ul>
-      </div>
     </section>
-
-    <!-- Three -->
-    <section id="three" class="wrapper style1">
-      <div class="container">
-        <header class="major special">
-          <h2>Mauris vulputate dolor</h2>
-          <p>Feugiat sed lorem ipsum magna</p>
-        </header>
-        <div class="feature-grid">
-          <div class="feature">
-            <div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
-            <div class="content">
-              <header>
-                <h4>Lorem ipsum</h4>
-                <p>Lorem ipsum dolor sit</p>
-              </header>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="image rounded"><img src="images/pic05.jpg" alt="" /></div>
-            <div class="content">
-              <header>
-                <h4>Recusandae nemo</h4>
-                <p>Ratione maiores a, commodi</p>
-              </header>
-              <p>Animi mollitia optio culpa expedita. Dolorem alias minima culpa repellat. Dolores, fuga maiores ut obcaecati blanditiis, at aperiam doloremque.</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="image rounded"><img src="images/pic06.jpg" alt="" /></div>
-            <div class="content">
-              <header>
-                <h4>Laudantium fugit</h4>
-                <p>Possimus ex reprehenderit eaque</p>
-              </header>
-              <p>Maiores iusto inventore fugit architecto est iste expedita commodi sed, quasi feugiat nam neque mollitia vitae omnis, ea natus facere.</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="image rounded"><img src="images/pic07.jpg" alt="" /></div>
-            <div class="content">
-              <header>
-                <h4>Porro aliquam</h4>
-                <p>Quaerat, excepturi eveniet laboriosam</p>
-              </header>
-              <p>Vitae earum unde, autem labore voluptas ex, iste dolorum inventore natus consequatur iure similique obcaecati aut corporis hic in! Porro sed.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Four -->
-    <section id="four" class="wrapper style3 special">
-      <div class="container">
-        <header class="major">
-          <h2>Aenean elementum ligula</h2>
-          <p>Feugiat sed lorem ipsum magna</p>
-        </header>
-        <ul class="actions">
-          <li><a href="#" class="button special big">Get in touch</a></li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="container">
-        <ul class="icons">
-          <li><a href="#" class="icon fa-facebook"></a></li>
-          <li><a href="#" class="icon fa-twitter"></a></li>
-          <li><a href="#" class="icon fa-instagram"></a></li>
-        </ul>
-        <ul class="copyright">
-          <li>&copy; Untitled</li>
-          <li>Design: <a href="http://templated.co">TEMPLATED</a></li>
-          <li>Images: <a href="http://unsplash.com">Unsplash</a></li>
-        </ul>
-      </div>
-    </footer>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
