--- a/rooftop-gardens.html
+++ b/rooftop-gardens.html
@@ -14,7 +14,7 @@
   <body class="landing">
 
     <!-- Header -->
-    <header id="header" class="alt">
+    <header id="header">
       <h1><strong><a href="index.html">Nutritional Necessities</a></strong></h1>
       <nav id="nav">
         <ul>
