--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body class="landing">
 
@@ -123,5 +124,15 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
 
-  </body>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115457793-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-115457793-1');
+		</script>
+		<Paste>
+	</body>
 </html>
