--- a/problem.html
+++ b/problem.html
@@ -47,7 +47,7 @@
           </div>
           <div class="10u">
             <center>
-              <iframe class="embedded-thing" src="https://www.youtube.com/embed/ED6Nv8-5wJM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe id="embedded-vid" class="embedded-thing" src="https://www.youtube.com/embed/ED6Nv8-5wJM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </center>
           </div>
           <div class="1u vid-nav">
