--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>New York City is covered with food deserts. <br />
       Learn how to stay healthy in the city that never sleeps.</p>
       <ul class="actions">
-        <li><a href="#one" class="button special big">Get Started</a></li>
+        <li><a href="https://goo.gl/forms/7PIVDjX9ldujQqsz2" target="_blank" class="button special big">Get Started</a></li>
       </ul>
     </section>
 
