--- a/rooftop-gardens.html
+++ b/rooftop-gardens.html
@@ -1,43 +1,226 @@
 <!DOCTYPE HTML>
 <!--
-  Spatial by TEMPLATED
-  templated.co @templatedco
-  Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+	Spatial by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-  <head>
-    <title>The Problem</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
-  </head>
-  <body class="landing">
+	<head>
+		<title>Rooftop Gardens</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="favicon.ico" rel="icon" type="image/x-icon" />
+	</head>
+	<body>
 
-    <!-- Header -->
-    <header id="header">
-      <h1><strong><a href="index.html">Nutritional Necessities</a></strong></h1>
-      <nav id="nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="problem.html">The Problem</a></li>
-          <li><a href="solutions.html">Solutions</a></li>
-          <li><a href="supermarkets.html">Find Supermarkets</a></li>
-          <li><a href="recipes.html">Find Recipes</a></li>
-          <li><a href="rooftop-gardens.html">Rooftop Gardens</a></li>
-        </ul>
-      </nav>
-    </header>
+		<!-- Header -->
+		<header id="header">
+			<h1><strong><a href="index.html">Nutritional Necessities</a></strong></h1>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="problem.html">The Problem</a></li>
+					<li><a href="solutions.html">Solutions</a></li>
+					<li><a href="supermarkets.html">Find Supermarkets</a></li>
+					<li><a href="recipes.html">Find Recipes</a></li>
+					<li><a href="rooftop-gardens.html">Rooftop Gardens</a></li>
+				</ul>
+			</nav>
+		</header>
 
-    <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+		<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+		<!-- Main -->
+		<section id="main" class="wrapper">
+			<div class="container">
 
-  </body>
+				<header class="major special">
+					<center>
+						<h2>Rooftop Gardens</h2>
+					</center>
+				</header>
+
+				<div class="row">
+					<div class="12u">
+						<span class="image fit">
+							<img src="images/rooftop-garden.jpg" alt="">
+						</span>
+					</div>
+				</div>
+
+				<div class="row">
+					<h2>Why start a rooftop garden?</h2>
+					<ul>
+						<li>
+							Rooftop gardens are great
+							features to transform
+							urban homes into peaceful
+							and eco-friendly
+							environments.
+						</li>
+						<li>
+							If you live in an apartment
+							or a house without a
+							backyard, rooftop gardens
+							would give you the
+							opportunity to tend a
+							variety of plants ranging
+							from trees and grasses, to
+							fruits and vegetables.
+						</li>
+						<li>
+							Make sure that your roof is
+							legible for cultivating
+							plants on. i.e, sun
+							exposure, water drainage
+						</li>
+						<li>
+							Get creative! Choose the
+							right seeds or bulbs to
+							utilize your space
+							efficiently.
+						</li>
+					</ul>
+				</div>
+
+				<div class="row">
+					<h2>How can you get one started?</h2>
+					<ul>
+						<li>Make sure that your
+							roof/balcony is legible for
+							cultivating plants on. i.e, sun
+							exposure, water drainage</li>
+						<li>Conduct some research when
+							buying fertilizer,soil, pots, and
+							seeds for gardening</li>
+						<li>Get creative! Gather your
+							choice of seeds or bulbs to
+							utilize your space efficiently.</li>
+						<li>Grab some gloves and start planting!</li>
+					</ul>
+				</div>
+
+				<div class="row">
+					<br />
+					<h2>What can you plant?</h2>
+
+					<div class="row">
+						<div class="3u">
+							Avocados
+							<br />
+							</span>
+							<span class="image fit">
+								<img src="images/avocado.jpeg">
+						</div>
+
+						<div class="3u">
+							Carrots
+							<br />
+							<span class="image fit">
+								<img src="images/carrots.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Tomatoes
+							<br />
+							<span class="image fit">
+								<img src="images/tomatoes.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Lemons
+							<br />
+							<span class="image fit">
+								<img src="images/lemons.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Mandarin-oranges
+							<br />
+							<span class="image fit">
+								<img src="images/mandarin-oranges.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Mushrooms
+							<br />
+							<span class="image fit">
+								<img src="images/mushrooms.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Salad-greens
+							<br />
+							<span class="image fit">
+								<img src="images/salad-greens.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Scallions
+							<br />
+							<span class="image fit">
+								<img src="images/scallions.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Basil
+							<br />
+							<span class="image fit">
+								<img src="images/basil.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Chives
+							<br />
+							<span class="image fit">
+								<img src="images/chives.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Cilantro
+							<br />
+							<span class="image fit">
+								<img src="images/cilantro.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Ginger
+							<br />
+							<span class="image fit">
+								<img src="images/ginger.jpeg">
+							</span>
+						</div>
+
+						<div class="3u">
+							Mint
+							<br />
+							<span class="image fit">
+								<img src="images/mint.jpeg">
+							</span>
+						</div>
+					</div>
+				</div>
+
+		</section>
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
 
 
