--- a/recipes.html
+++ b/recipes.html
@@ -6,13 +6,13 @@
 -->
 <html>
   <head>
-    <title>The Problem</title>
+    <title>Recipes</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
-  <body class="landing">
+  <body>
 
     <!-- Header -->
     <header id="header">
@@ -21,13 +21,361 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="problem.html">The Problem</a></li>
-          <li><a href="solutions.html">Solutions</a></li>
           <li><a href="supermarkets.html">Find Supermarkets</a></li>
           <li><a href="recipes.html">Find Recipes</a></li>
           <li><a href="rooftop-gardens.html">Rooftop Gardens</a></li>
+          <li><a href="feedback.html">Feedback</a></li>
         </ul>
       </nav>
     </header>
+
+    <!-- Main -->
+    <section id="main" class="wrapper">
+      <div class="container">
+
+        <header class="major special">
+          <center>
+            <h2>Healthy Recipes</h2>
+          </center>
+        </header>
+
+        <h2>Breakfast:</h2>
+        <div class="row">
+          <div class="12u">
+            <h3>Easy Yogurt Oatmeal Cups</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/oatmeal-cups.png" alt="" />
+            </span>
+          </div>
+          <div class="3u">
+            Ingredients:
+            <ul>
+              <li>1 banana, mashed</li>
+              <li>1⁄4 cup honey</li>
+              <li>1 teaspoon vanilla</li>
+              <li>1 teaspoon salt</li>
+              <li>1 1⁄2 cups oats</li>
+              <li>1 cup yogurt</li>
+            </ul>
+          </div>
+          <div class="3u">
+            Optional toppings:
+            <ul>
+              <li>strawberry</li>
+              <li>blueberry</li>
+              <li>raspberry</li>
+              <li>apple</li>
+              <li>banana</li>
+              <li>nuts</li>
+              <li>mango</li>
+              <li>kiwi</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ul>
+              <li>In a medium-sized bowl, mash a ripened banana until mostly smooth.</li>
+              <li>Add honey and vanilla, stir.</li>
+              <li>Add salt, and oats. Mix well.</li>
+              <li>Press 2 tablespoons of mix into each cup, form a cup-shape.</li>
+              <li>Refrigerate 0.5 hour and preheat oven to 350oF (180oC).</li>
+              <li>Bake granola cups for 30 minutes</li>
+              <li>Allow to cool for 5 minutes and add a tablespoon of yogurt to each cup along with any preferred</li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="12u">
+            <h3>Sweet & Salty Maple Granola Bark</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/granola-bark.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>2 tsp. vanilla extract</li>
+              <li>2 tsp. Maple syrup</li>
+              <li>1/2 c. olive oil</li>
+              <li>1 large egg white</li>
+              <li>3 c. old-fashioned oats</li>
+              <li>1 c. roasted, salted almonds,</li>
+              <li>coarsely chopped</li>
+              <li>1/2 c. sunflower seeds</li>
+              <li>1/2 c. almond flour</li>
+              <li>1 1/2 tsp. ground cinnamon</li>
+              <li>Milk and fresh fruit (such as berries and peaches), for serving</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>In a medium-sized bowl, mash a ripened banana until mostly smooth.</li>
+              <li>Add honey and vanilla, stir.</li>
+              <li>Add salt, and oats. Mix well.</li>
+              <li>Press 2 tablespoons of mix into each cup, form a cup-shape.</li>
+              <li>Refrigerate 0.5 hour and preheat oven to 350oF (180oC).</li>
+              <li>Bake granola cups for 30 minutes</li>
+              <li>Allow to cool for 5 minutes and add a tablespoon of yogurt to each cup along with any preferred</li>
+            </ol>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="12u">
+            <h3>Banana Nut Hot Chocolate</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/hot-chocolate.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>2 cups plain almond milk</li>
+              <li>2 fully-ripened large bananas (1 1/2 diced and 1/2 thinly sliced crosswise)</li>
+              <li>1/4 teaspoon pure almond extract</li>
+              <li>1/4 teaspoon pure vanilla extract Kosher salt</li>
+              <li>2 cups old-fashioned rolled oats</li>
+              <li>2 tablespoons unsweetened cocoa powder</li>
+              <li>2 tablespoons honey or agave</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>Bring the almond milk, 1 3/4 cups water, the diced bananas, almond and vanilla extracts and pinch of salt to a boil in a large saucepan over high heat.</li>
+              <li>Stir in the oats, cocoa, powder, and 1 tablespoon of the honey and reduce the heat to medium.</li>
+              <li>Cook, stirring frequently, until the oats are fully cooked to desired consistency, 6 to 7 minutes.</li>
+              <li>Transfer to 4 bowls, top with the sliced bananas, walnuts, the remaining 1 tablespoon honey, cinnamon, and chocolate chipes and serve.</li>
+            </ol>
+          </div>
+        </div>
+
+        <h2>Lunch:</h2>
+        <div class="row">
+          <div class="12u">
+            <h3>Veggie Stack Pita Pockets</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/pita-pockets.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>1 (15-ounce) can chickpeas or white beans, rinsed and drained</li>
+              <li>1 to 2 tablespoons water</li>
+              <li>2 teaspoons freshly squeezed lemon juice</li>
+              <li>1 teaspoon kosher salt, plus more for seasoning</li>
+              <li>Pinch red pepper flakes</li>
+              <li>1/4 cup extra-virgin olive boilFreshly ground black pepper1 small cucumber, sliced or 1/2 bell pepper, seeded and sliced.</li>
+              <li>10 to 12 whole-wheat pita minis (3 inches).</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>Combine the chickpeas, water, cheese, lemon juice, salt and red pepper flakes in a food processor and puree until completely smooth, about 5 minutes. While the motor is running, pour in the olive oil and process until fully incorporated and velvety. Season with pepper, to taste.</li>
+              <li>Spoon a scant tablespoon bean spread into toasted pitas. (Put remaining bean spread in an air-tight container.) Add cucumber slices, or other vegetables of choice and season, to taste, with salt and pepper.  Wrap in parchment or butcher paper, and pack in a plastic container to keep from getting squished. Pack in a lunch box and send to school.</li>
+            </ol>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="12u">
+            <h3>Chicken Chili</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/chicken-chili.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>4 cups chopped yellow onions (3 onions)</li>
+              <li>1/8 cup good olive oil, plus extra for chicken</li>
+              <li>1/8 cup minced garlic (2 cloves)</li>
+              <li>2 red bell peppers, cored, seeded, and large- diced</li>
+              <li>2 yellow bell peppers, cored, seeded, and large-diced</li>
+              <li>1 teaspoon chili powder</li>
+              <li>1 teaspoon ground cumin</li>
+              <li>1/4 teaspoon dried red pepper flakes, or to taste</li>
+              <li>1/4 teaspoon cayenne pepper, or to taste</li>
+              <li>2 teaspoons kosher salt, plus more for chicken</li>
+              <li>2 (28-ounce) cans whole peeled plum tomatoes in puree, undrained</li>
+              <li>1/4 cup minced fresh basil leaves</li>
+              <li>4 split chicken breasts (halal), bone in, skin on</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>1. Cook the onions in the oil over medium-low heat for 10 to 15 minutes, until translucent. Add the garlic and cook for 1 more minute.  Add the bell peppers, chili powder, cumin, red pepper flakes, cayenne, and salt. Cook for 1 minute. Crush the tomatoes by hand or in batches in a food processor fitted with a steel blade (pulse 6 to 8 times). Add to the pot with the basil. Bring to a boil, then reduce the heat and simmer, uncovered, for 30 minutes, stirring occasionally.</li>
+<li>2. Preheat the oven to 350 degrees F.</li>
+<li>3. Rub the chicken breasts with olive oil and place them on a baking sheet. Sprinkle generously with salt and pepper. Roast the chicken for 35 to 40 minutes, until just cooked. Let cool slightly. Separate the meat from the bones and skin and cut it into 3/4-inch chunks. Add to the chili and simmer, uncovered, for another 20 minutes. Serve with the toppings, or refrigerate and reheat gently before serving.</li>
+            </ol>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="12u">
+            <h3>White Chili</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/white-chili.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>1 medium onion, diced (about 1 1/2 cups)</li>
+              <li>2 stalks celery, diced (about 1/2 cup)</li>
+              <li>3 medium peppers (about 4 ounces each</li>
+              <li>1 clove garlic, minced</li>
+              <li>1 teaspoon ground cumin</li>
+              <li>1/2 teaspoon ground coriander</li>
+              <li>1/4 teaspoon cayenne pepper, more to taste</li>
+              <li>1 pound ground white meat turkey</li>
+              <li>2 (15.5-ounce) cans white beans such as cannelini, preferably low-sodium, drained and rinsed</li>
+              <li>4 cups low-sodium chicken broth</li>
+              <li>3/4 teaspoon dried oregano</li>
+              <li>1 (15.5-ounce) can hominy, drained and rinsed</li>
+              <li>Salt</li>
+              <li>1/4 cup nonfat plain Greek-style yogurt</li>
+              <li>2 tablespoons chopped fresh cilantro leaves</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>1. Heat the oil in large pot or Dutch oven over moderate heat.  Add the onion, celery, poblanos, and cook, stirring occasionally, until the vegetables are soft, about 8 minutes.  Add the garlic, cumin, coriander and cayenne and cook, stirring, until fragrant, about 30 seconds.</li>
+<li>2. Add the ground turkey and cook, breaking up the meat with a spoon, until the meat is no longer pink about 2 minutes. Add the white beans, broth and oregano. Cook, partially covered, stirring occasionally, for 25 minutes.</li>
+<li>3. Add the hominy and salt and more cayenne pepper, to taste, and continue cooking, partially covered, 10 minutes longer.  Ladle into individual bowls and top each serving with 1 tablespoon of yogurt and 1 1/2 teaspoons of cilantro. Garnish</li>
+            </ol>
+          </div>
+        </div>
+
+        <h2>Dinner</h2>
+        <div class="row">
+          <div class="12u">
+            <h3>Couliflower Gnocchi</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/gnocchi.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>2 large russet potatoes (about 1 1/2 pounds)</li>
+              <li>1/2 cup gluten-free all-purpose flour, plus more for dusting</li>
+              <li>1 medium head cauliflower, chopped into florets (about 1 pound)</li>
+              <li>1/4 cup grated Parmesan</li>
+              <li>1 large egg yolk</li>
+              <li>Kosher salt and freshly ground black pepper</li>
+              <li>5 tablespoons unsalted butter, diced</li>
+              <li>2 tablespoons drained capers</li>
+              <li>1/4 cup fresh parsley, chopped</li>
+              <li>Salad, for serving</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>Preheat the oven to 425 degrees F. Prick the potatoes all over with a fork and place on a baking sheet. Bake, flipping halfway through, until fork-tender, about 45 minutes. When the potatoes are cool enough to handle, cut them in half and carefully scoop the flesh into a large bowl.  Meanwhile, fill a medium saucepan with 2 inches of water. Set a steamer basket insert into the pot and bring the water to a simmer over medium-high heat. Add the cauliflower, cover and steam until very tender and falling apart when pierced with a fork, 12 to 14 minutes. Drain the cauliflower and use clean kitchen towels to squeeze completely dry.Generously flour a work surface. Scoop a heaping 1/2 cup of dough onto the surface and roll into a 12-inch rope. Repeat with the remaining dough. Gently press the top of each gnocchi with a fork to make grooves.</li>
+<li>Melt 1 tablespoon butter in a small microwave-safe bowl in the microwave.  Brush the gnocchi with the butter. Bake the gnocchi until cooked through and they spring back when pressed, 10 to 12 minutes.  Melt the remaining 4 tablespoons butter in a large skillet over medium heat until brown bits start to form, 5 to 6 minutes. Remove from the heat, add the capers and stir until well combined. Toss the gnocchi in the brown butter and sprinkle with the parsley. Serve immediately with a salad on the side.</li>
+            </ol>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="12u">
+            <h3>Healthy Butter Shrimp Foil Pack</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/shrimp-foil-pack.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>1 1/4 pounds peeled and deveined large shrimp</li>
+              <li>5 garlic cloves, smashed</li>
+              <li>2 teaspoons chipotle hot sauce, plus more to taste</li>
+              <li>2 teaspoons ground cumin</li>
+              <li>1 teaspoon dried oregano</li>
+              <li>1/4 teaspoon ground coriander</li>
+              <li>3/4 teaspoon kosher salt</li>
+              <li>1/2 cup Mexican-style lager, such as Corona</li>
+              <li>2 tablespoons unsalted butter, cut into pieces</li>
+              <li>1 lime, halved</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>Prepare a grill for medium heat. Lay out a piece of heavy-duty foil 12 inches by 18 inches. Fold the four sides up to create walls and spread the shrimp in the center of the foil. Toss the shrimp with the garlic, chipotle sauce, cumin, oregano, coriander and salt. Dot the butter pieces on top.</li>
+              <li>Cover with another large piece of foil and crimp and fold the edges together to seal tightly.</li>
+              <li>Transfer the foil pack to the grill, close the lid and cook until the shrimp are pink and cooked through, 4 to 6 minutes.  Remove from the heat and let sit for a few minutes. Carefully tear the packet open, being careful not to let the escaping steam burn you.</li>
+              <li>Squeeze lime juice over the shrimp and sprinkle with cilantro. Serve the shrimp with the rice and pass extra chipotle hot sauce on the side.</li>
+            </ol>
+          </div>
+        </div>
+        <hr>
+
+        <div class="row">
+          <div class="12u">
+            <h3>Parmesan Roasted Cauliflower</h3>
+          </div>
+          <div class="6u">
+            <span class="image fit">
+              <img src="images/cauliflower.png" alt="" />
+            </span>
+          </div>
+          <div class="6u">
+            Ingredients:
+            <ul>
+              <li>1 large head cauliflower</li>
+              <li>3 tablespoons good olive oil</li>
+              <li>Kosher salt and freshly ground black pepper</li>
+              <li>1 cup freshly grated Parmesan cheese (2 ounces)</li>
+              <li>1 cup freshly grated Gruyere cheese (2 ounces)</li>
+            </ul>
+          </div>
+          <div class="6u">
+            Directions:
+            <ol>
+              <li>Preheat the oven to 350 degrees.</li>
+              <li>Remove the outer green leaves from the cauliflower and cut the head into florets, discarding the stems. Place the florets on a sheet pan.</li>
+              <li>Drizzle with olive oil and sprinkle generously with salt and pepper.</li>
+              <li>Toss well. Bake for 30 minutes, tossing once, until the cauliflower is tender and starts to brown.</li>
+              <li>Sprinkle with the Parmesan and Gruyere and bake for 1 to 2 more minutes, just until the cheese melts. Season to taste and serve hot or warm.</li>
+            </ol>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    </div>
+    </section>
 
     <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
