--- a/rooftop-gardens.html
+++ b/rooftop-gardens.html
@@ -21,10 +21,10 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="problem.html">The Problem</a></li>
-					<li><a href="solutions.html">Solutions</a></li>
 					<li><a href="supermarkets.html">Find Supermarkets</a></li>
 					<li><a href="recipes.html">Find Recipes</a></li>
 					<li><a href="rooftop-gardens.html">Rooftop Gardens</a></li>
+					<li><a href="feedback.html">Feedback</a></li>
 				</ul>
 			</nav>
 		</header>
