--- a/recipes.html
+++ b/recipes.html
@@ -39,17 +39,21 @@
           </center>
         </header>
 
+        <header class="major special">
+          <p>Download the cookbook at <a href="https://drive.google.com/file/d/19BrMzgqTf9YvHuoO_dr5B-aDdqzKI1CI/view?usp=sharing" target="_blank">this link</a> or browse below.</p>
+        </header>
+
         <h2>Breakfast:</h2>
         <div class="row">
-          <div class="12u">
+          <div class="12u ">
             <h3>Easy Yogurt Oatmeal Cups</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/oatmeal-cups.png" alt="" />
             </span>
           </div>
-          <div class="3u">
+          <div class="3u 12u$(medium)">
             Ingredients:
             <ul>
               <li>1 banana, mashed</li>
@@ -60,7 +64,7 @@
               <li>1 cup yogurt</li>
             </ul>
           </div>
-          <div class="3u">
+          <div class="3u 12u$(medium)">
             Optional toppings:
             <ul>
               <li>strawberry</li>
@@ -73,7 +77,7 @@
               <li>kiwi</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ul>
               <li>In a medium-sized bowl, mash a ripened banana until mostly smooth.</li>
@@ -82,7 +86,7 @@
               <li>Press 2 tablespoons of mix into each cup, form a cup-shape.</li>
               <li>Refrigerate 0.5 hour and preheat oven to 350oF (180oC).</li>
               <li>Bake granola cups for 30 minutes</li>
-              <li>Allow to cool for 5 minutes and add a tablespoon of yogurt to each cup along with any preferred</li>
+              <li>Allow to cool for 5 minutes and add a tablespoon of yogurt to each cup along with any preferred toppings.</li>
             </ul>
           </div>
         </div>
@@ -92,12 +96,12 @@
           <div class="12u">
             <h3>Sweet & Salty Maple Granola Bark</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/granola-bark.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>2 tsp. vanilla extract</li>
@@ -113,7 +117,7 @@
               <li>Milk and fresh fruit (such as berries and peaches), for serving</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>In a medium-sized bowl, mash a ripened banana until mostly smooth.</li>
@@ -129,15 +133,15 @@
         <hr>
 
         <div class="row">
-          <div class="12u">
+          <div class="12u 12u$(medium)">
             <h3>Banana Nut Hot Chocolate</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/hot-chocolate.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>2 cups plain almond milk</li>
@@ -149,7 +153,7 @@
               <li>2 tablespoons honey or agave</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>Bring the almond milk, 1 3/4 cups water, the diced bananas, almond and vanilla extracts and pinch of salt to a boil in a large saucepan over high heat.</li>
@@ -165,12 +169,12 @@
           <div class="12u">
             <h3>Veggie Stack Pita Pockets</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/pita-pockets.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>1 (15-ounce) can chickpeas or white beans, rinsed and drained</li>
@@ -182,7 +186,7 @@
               <li>10 to 12 whole-wheat pita minis (3 inches).</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>Combine the chickpeas, water, cheese, lemon juice, salt and red pepper flakes in a food processor and puree until completely smooth, about 5 minutes. While the motor is running, pour in the olive oil and process until fully incorporated and velvety. Season with pepper, to taste.</li>
@@ -196,12 +200,12 @@
           <div class="12u">
             <h3>Chicken Chili</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/chicken-chili.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>4 cups chopped yellow onions (3 onions)</li>
@@ -219,7 +223,7 @@
               <li>4 split chicken breasts (halal), bone in, skin on</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>1. Cook the onions in the oil over medium-low heat for 10 to 15 minutes, until translucent. Add the garlic and cook for 1 more minute.  Add the bell peppers, chili powder, cumin, red pepper flakes, cayenne, and salt. Cook for 1 minute. Crush the tomatoes by hand or in batches in a food processor fitted with a steel blade (pulse 6 to 8 times). Add to the pot with the basil. Bring to a boil, then reduce the heat and simmer, uncovered, for 30 minutes, stirring occasionally.</li>
@@ -234,12 +238,12 @@
           <div class="12u">
             <h3>White Chili</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/white-chili.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>1 medium onion, diced (about 1 1/2 cups)</li>
@@ -259,7 +263,7 @@
               <li>2 tablespoons chopped fresh cilantro leaves</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>1. Heat the oil in large pot or Dutch oven over moderate heat.  Add the onion, celery, poblanos, and cook, stirring occasionally, until the vegetables are soft, about 8 minutes.  Add the garlic, cumin, coriander and cayenne and cook, stirring, until fragrant, about 30 seconds.</li>
@@ -274,12 +278,12 @@
           <div class="12u">
             <h3>Couliflower Gnocchi</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/gnocchi.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>2 large russet potatoes (about 1 1/2 pounds)</li>
@@ -294,7 +298,7 @@
               <li>Salad, for serving</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>Preheat the oven to 425 degrees F. Prick the potatoes all over with a fork and place on a baking sheet. Bake, flipping halfway through, until fork-tender, about 45 minutes. When the potatoes are cool enough to handle, cut them in half and carefully scoop the flesh into a large bowl.  Meanwhile, fill a medium saucepan with 2 inches of water. Set a steamer basket insert into the pot and bring the water to a simmer over medium-high heat. Add the cauliflower, cover and steam until very tender and falling apart when pierced with a fork, 12 to 14 minutes. Drain the cauliflower and use clean kitchen towels to squeeze completely dry.Generously flour a work surface. Scoop a heaping 1/2 cup of dough onto the surface and roll into a 12-inch rope. Repeat with the remaining dough. Gently press the top of each gnocchi with a fork to make grooves.</li>
@@ -308,12 +312,12 @@
           <div class="12u">
             <h3>Healthy Butter Shrimp Foil Pack</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/shrimp-foil-pack.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>1 1/4 pounds peeled and deveined large shrimp</li>
@@ -328,7 +332,7 @@
               <li>1 lime, halved</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>Prepare a grill for medium heat. Lay out a piece of heavy-duty foil 12 inches by 18 inches. Fold the four sides up to create walls and spread the shrimp in the center of the foil. Toss the shrimp with the garlic, chipotle sauce, cumin, oregano, coriander and salt. Dot the butter pieces on top.</li>
@@ -344,12 +348,12 @@
           <div class="12u">
             <h3>Parmesan Roasted Cauliflower</h3>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/cauliflower.png" alt="" />
             </span>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Ingredients:
             <ul>
               <li>1 large head cauliflower</li>
@@ -359,7 +363,7 @@
               <li>1 cup freshly grated Gruyere cheese (2 ounces)</li>
             </ul>
           </div>
-          <div class="6u">
+          <div class="6u 12u$(medium)">
             Directions:
             <ol>
               <li>Preheat the oven to 350 degrees.</li>
