--- a/feedback.html
+++ b/feedback.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
-  <body class="landing">
+  <body>
 
     <!-- Header -->
     <header id="header">
@@ -30,6 +30,31 @@
     </header>
 
     <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+
+    <!-- Main -->
+    <section id="main" class="wrapper">
+      <div class="container">
+
+        <header class="major special">
+          <center>
+            <h2>Feedback</h2>
+            <p>Thank you for using our site. We hope you learned a lot and are on your way to leading a healthier lifestyle.</p>
+          </center>
+        </header>
+
+        <h2>Feedback Form</h2>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnaqSTHxohjXP76WgGzpbONmlB08gBzF3WtJHXXWB4yju7ow/viewform?embedded=true" width="100%" height="2100" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+      </div>
+    </section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+          <img width="600px" src="./images/mist-ny.jpeg" alt="" />
+          <p>Made for the purposes of MIST Community Service 2018 &copy;</p>
+				</div>
+			</footer>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
