--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-  Spatial by TEMPLATED
-  templated.co @templatedco
-  Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+  Made by Noor al Stuy 
 -->
 <html>
   <head>
@@ -62,61 +60,55 @@
 
         <div class="row">
           <div class="6u 12u$(medium)">
-            <h2>Solutions</h2>
-            <p>There are many solutions to this problem.</p>
-            <a class="button" href="solutions.html">Learn more</a>
+            <h2>Find supermarkets</h2>
+            <p>Shopping at good supermarkets is important to leading a nutritious lifestyle. We will help you find the right places to go when you are out of groceries.</p>
+            <a class="button" href="supermarkets.html">Learn more</a>
           </div>
-          <div class="6u 12u$(medium)">
-            <span class="image fit">
-              <img src="images/solutions.jpg" alt="" />
-            </span>
-          </div>
-        </div>
-        <hr>
-
-        <div class="row">
           <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/supermarket.jpg" alt="" />
             </span>
           </div>
-          <div class="6u 12u$(medium)">
-            <h2>Find supermarkets</h2>
-            <p>Find supermarkets near you where you can buy healthy ingredients.</p>
-            <a class="button" href="supermarkets.html">Learn more</a>
-          </div>
         </div>
         <hr>
 
         <div class="row">
-          <div class="6u 12u$(medium)">
-            <h2>Learn recipes</h2>
-            <p>There are many healthy recipe choices to make sure you're eating a nutritious and delicious meal.</p>
-            <a class="button" href="recipes.html">Learn more</a>
-          </div>
           <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/cooking.png" alt="" />
             </span>
           </div>
+          <div class="6u 12u$(medium)">
+            <h2>Learn recipes</h2>
+            <p>There are many healthy recipe choices to make sure you're eating a nutritious and delicious meal.</p>
+            <a class="button" href="recipes.html">Learn more</a>
+          </div>
         </div>
         <hr>
 
         <div class="row">
           <div class="6u 12u$(medium)">
+            <h2>Rooftop gardens</h2>
+            <p>Buying healthy groceries all of the time can get very expensive. Starting a rooftop garden is a cheap alternative to buying all of your groceries.</p>
+            <a class="button" href="rooftop-gardens.html">Learn more</a>
+          </div>
+          <div class="6u 12u$(medium)">
             <span class="image fit">
               <img src="images/rooftop-garden.jpg" alt="" />
             </span>
-          </div>
-          <div class="6u 12u$(medium)">
-            <h2>Rooftop gardens</h2>
-            <p>Starting a rooftop garden is a cheap alternative to buying all of your groceries.</p>
-            <a class="button" href="rooftop-gardens.html">Learn more</a>
           </div>
         </div>
       </div>
 
     </section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+          <img width="600px" src="./images/mist-ny.jpeg" alt="" />
+          <p>Made for the purposes of MIST Community Service 2018 &copy;</p>
+				</div>
+			</footer>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
