--- a/problem.html
+++ b/problem.html
@@ -73,6 +73,14 @@
       </div>
     </section>
 
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+          <img width="600px" src="./images/mist-ny.jpeg" alt="" />
+          <p>Made for the purposes of MIST Community Service 2018 &copy;</p>
+				</div>
+			</footer>
+
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/skel.min.js"></script>
