--- a/recipes.html
+++ b/recipes.html
@@ -381,6 +381,14 @@
     </div>
     </section>
 
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="container">
+          <img width="600px" src="./images/mist-ny.jpeg" alt="" />
+          <p>Made for the purposes of MIST Community Service 2018 &copy;</p>
+				</div>
+			</footer>
+
     <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
     <!-- Scripts -->
